<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search_patient"
        android:icon="@drawable/baseline_search_48"
        android:title="@string/title_search_patient" />

    <item
        android:id="@+id/navigation_create_patient"
        android:icon="@drawable/baseline_add_48"
        android:title="@string/title_create_patient" />

    <item
        android:id="@+id/navigation_delete_patient"
        android:icon="@drawable/baseline_delete_48"
        android:title="@string/title_delete_patient" />

</menu>
